tests/baselines/reference/parserMemberAccessorDeclaration12(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserMemberAccessorDeclaration12.ts(2,8): error TS1054: A 'get' accessor cannot have parameters.
parserMemberAccessorDeclaration12.ts(2,8): error TS2378: A 'get' accessor must return a value.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserMemberAccessorDeclaration12.ts (2 errors) ====
    class C {
       get Foo(a: number) { }
           ~~~
!!! error TS1054: A 'get' accessor cannot have parameters.
           ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }